--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,9 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+html {
+  scroll-behavior: smooth;
+}
 @font-face {
   font-family: satoshi-b;
   src: url(/satoshi/Satoshi-Bold.otf);
